--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "gatsby-plugin-canonical-urls": "^2.3.2",
     "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "2.4.8",
     "gatsby-plugin-offline": "3.2.6",
     "gatsby-plugin-postcss": "2.3.2",
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "3.3.2",
-    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "2.6.8",
     "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-source-dev": "^0.1.4",
     "gatsby-source-dribbble": "^2.1.3",
-    "gatsby-source-filesystem": "^2.3.7",
+    "gatsby-source-filesystem": "^2.3.19",
     "gatsby-source-instagram": "^0.7.0",
     "gatsby-transformer-json": "^2.4.3",
     "gatsby-transformer-remark": "^2.8.12",
